# RoguelikeEngine

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md
include/: GameEngine.h  Item.h  Level.h  Logger.h  ModLoader.h  Monster.h  Player.h  Room.h
mods/: items.csv  items.json  monsters.csv  monsters.json  rooms.csv  rooms.json
scenarios/: CMakeLists.txt  scenario_10_clear_level.cpp  scenario_11_boss_fight.cpp  scenario_12_mod_loading.cpp  scenario_13_use_armor.cpp  scenario_1_game_start.cpp  scenario_2_level_generation.cpp  scenario_3_player_movement.cpp  scenario_4_combat_victory.cpp  scenario_5_combat_death.cpp  scenario_6_combat_escape.cpp  scenario_7_pickup_item.cpp  scenario_8_use_potion.cpp  scenario_9_use_weapon.cpp
src/: GameEngine.cpp  Item.cpp  Level.cpp  Logger.cpp  ModLoader.cpp  Monster.cpp  Player.cpp  Room.cpp  main.cpp
tests/: CMakeLists.txt  test_item.cpp  test_logger.cpp  test_monster.cpp  test_player.cpp  test_room.cpp  Тестовые_сценарии.txt
